main and json Update

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://devloperakii.github.io/Simple-Car-Game/",
   "name": "practice-project",
   "version": "0.0.0",
   "private": true,
